--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
 
     <img class="perfil"
-    src="https://github.com/WesleyApui.png"
+    src="https://github.com/wesleysalesdev.png"
     alt="Foto de Perfil do Wesley">
 
     <h1> Wesley Sales</h1>
