--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linktree</title>
+    <title>Perfil Wesley</title>
     
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 
@@ -22,32 +22,32 @@
 
     <h1> Wesley Sales</h1>
 
-    <p class="nomedeusuario">@wesleyapui</p>
+    <p class="nomedeusuario">@wesleysalesdev</p>
 
 <ul>
   <li>
     <a
-    href="https://www.linkedin.com/in/wesleyapui/"
+    href="https://www.linkedin.com/in/wesleysalesdev/"
     target="_blank">Linkedin</a>    
   </li>
   <li>
     <a
-    href="http://bit.ly/instawesleyapui"
+    href="https://www.instagram.com/wesleysalesdev/"
     target="_blank">Instagram</a>    
   </li>
   <li>
       <a
-      href="http://bit.ly/facebookwesley"
+      href="https://web.facebook.com/wesleysalesdev/"
       target="_blank">Facebook</a>    
     </li>
     <li>
     <a
-    href="http://bit.ly/twitterwesley"
+    href="https://twitter.com/wesleysalesdev"
     target="_blank">Twitter</a>    
   </li>
   <li>
     <a
-    href="https://github.com/WesleyApui"
+    href="https://github.com/wesleysalesdev"
     target="_blank">Github</a>    
   </li>
   <li>
