--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="styles.css">
 
   </head>
-  <body class="dark-pink">
+  <body class="dark-gray">
 
     <div class="container">
 
